# pulumi_project

./: pyproject.toml  readme.md
backend/: celery.dockerfile  graphql-schema.graphql  models.py  pyproject.toml  tasks.py  utils.py
backend/lambdas/: createShipment.py  updateShipmentStatus.py
infrastructure/: Pulumi.yaml  __main__.py  apigateway.py  appsync.py  ecs.py  lambdafunction.py  monitoring.py  pyproject.toml  rds.py  redis.py  s3.py  samples.txt  sqs.py
infrastructure/backend/: celery.dockerfile  models.py  tasks.py  utils.py
