[tool.poetry]
name = "pulumi-project"
version = "0.1.0"
description = "pulumi example project using celery, aws to show understanding of distributed tasks"
authors = ["Collin Hicks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.24"
pulumi = "^3.159.0"
pulumi-aws = "^6.74.0"
pulumi-random = "^4.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
