[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend services for pulumi project"
authors = ["Collin Hicks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.24"
redis = "^5.2.1"
psycopg2 = "^2.9.10"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
